# finite-element

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: matrix_tools.h  solver.h  tests.h  vector_tools.h
py/: assemble.py  basis_func.py  main.py  mesh.py  test_suite.py
py/mesh/: circular.msh  l_shape.msh
py/numpy_io/: a.out  np_array.npy  read_matrix.c  read_matrix.c.orig  write_matrix.py
src/tunnel/: matrix_tools.c  solver.c  tests.c  vector_tools.c
